--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,8 +84,10 @@ dependencies {
     testImplementation 'com.google.dagger:hilt-android-testing:2.47'
     kaptTest 'com.google.dagger:hilt-compiler:2.47'
 
+
     kapt 'androidx.room:room-compiler:2.5.2'
     implementation 'androidx.room:room-ktx:2.5.2'
     //date time
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.6'
+    implementation 'me.relex:circleindicator:2.1.6'
 }
