--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,18 @@
         android:theme="@style/Base.Theme.WeatherApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.add_location.search.SearchLocation"
+            android:exported="false" />
+        <activity
+            android:name=".ui.add_location.location_list.LocationList"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.AddCityActivity"
             android:exported="false" />
         <activity
@@ -26,11 +38,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
